--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "expo-constants": "~13.1.1",
     "expo-font": "~10.1.0",
     "expo-image-picker": "~13.1.1",
+    "expo-linear-gradient": "~11.3.0",
     "expo-linking": "~3.1.0",
     "expo-splash-screen": "~0.15.1",
     "expo-status-bar": "~1.3.0",
